compiler/testData/diagnostics/tests/traitWithRequired/abstractClass.kt
open class Required

trait Trait : Required

abstract class <!UNMET_TRAIT_REQUIREMENT!>Abstract<!> : Trait

abstract class <!UNMET_TRAIT_REQUIREMENT!>AbstractDerived<!> : Abstract()
